# dashboard-V2

./: .gitignore  Cargo.toml  README.md  fastly.toml
.cargo/: config
src/: burden.rs  main.rs  url.rs
src/templates/: loadtest_dashboard.html.j2
src/tests/: burden_result.json
